--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- скрипты для переходов -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- подключаем скрипты для слайдов -->
-    <link rel="stylesheet" href="/slide/itc-slider.css">
-    <script src="/slide/itc-slider.js" defer></script>
+    <link rel="stylesheet" href="slide/itc-slider.css">
+    <script src="slide/itc-slider.js" defer></script>
 </head>
 <body>
     
